Function libraries, review fixes, and 41x throughput vs JSONata4Java (#26)
* feat: compile JSONata definition expressions into JsonataBoundFunctions

Adds function libraries: a JSONata expression that binds named lambdas can now
be turned into ready-to-use Java functions, selected by name.

    Map<String, JsonataBoundFunction> trig = factory.compileFunctions(
            List.of("$sin", "$cos"), definitionExpression);

Only the requested names are exported; other bindings in the definition stay
internal but remain reachable from the exported closures, so helper values and
helper functions ($pi, $product, $factorial) work as usual, and mutual
recursion between exported functions works.

How it works:

  * FunctionExportRewriter appends {"sin": $sin, ...} to the outermost block of
    the parsed definition — appending inside the block is what puts the export in
    scope of the block's Java locals — and recovers each function's arity and
    signature from the AST. The translator is untouched.
  * The rewritten expression is evaluated once with a LambdaScope installed. While
    a scope is installed, lambdaNode mints scope-qualified token keys
    (__λ:<scopeId>/<n>) into that durable scope instead of the per-evaluation map,
    which EvalState.end() clears. A scope-qualified token carries its own home, so
    it resolves on any thread, inside any evaluation, or with none active — no
    install/uninstall at the call site.
  * ExportedJsonataFunction applies the runtime calling convention: no argument
    becomes null, one is passed through, several are packed into a packArgs tuple.
    It opens an evaluation frame only when called outside one, so a call from
    inside an expression shares that evaluation's bindings, recursion budget and
    timeout.

JsonataFunctionLibrary owns the scope and the generated class; close() releases
it, and a Cleaner covers libraries that are dropped without closing.

Ordinary expressions are unaffected: unqualified token keys and the
